--- a/templates/index.html
+++ b/templates/index.html
@@ -299,9 +299,9 @@
     <div class="row justify-content-center">
       <div class="col-12 text-center">
         <div class="section-header">
-          <h2 class="title">How To Get Profit.</h2>
+          <h2 class="title">វិធីដើម្បីទទួលបានប្រាក់ចំណេញ។</h2>
           <p class="section-para">
-            We utilize your money and provide a source of high income.
+            យើងប្រើប្រាស់លុយរបស់អ្នក និងផ្តល់ប្រភពចំណូលខ្ពស់។
           </p>
         </div>
       </div>
@@ -313,10 +313,10 @@
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
           </div>
           <div class="profit-content">
-            <h4 class="subtitle">Make Plan</h4>
+            <h4 class="subtitle">ធ្វើផែនការ</h4>
             <p>
-              Make a decision of the plan you like and think is the most
-              profitable.
+              ធ្វើការសម្រេចចិត្តលើផែនការដែលអ្នកចូលចិត្ត
+              ហើយគិតថាជាផលចំណេញច្រើនបំផុត។
             </p>
           </div>
         </div>
@@ -327,8 +327,10 @@
             <i class="fas fa-id-card"></i>
           </div>
           <div class="profit-content">
-            <h4 class="subtitle">Create Account</h4>
-            <p>Create a user profile for yourself using the register option.</p>
+            <h4 class="subtitle">បង្កើតគណនី</h4>
+            <p>
+              បង្កើតទម្រង់អ្នកប្រើប្រាស់សម្រាប់ខ្លួនអ្នកដោយប្រើជម្រើសចុះឈ្មោះ។
+            </p>
           </div>
         </div>
       </div>
@@ -338,8 +340,8 @@
             <i class="far fa-images"></i>
           </div>
           <div class="profit-content">
-            <h4 class="subtitle">Choose Plan</h4>
-            <p>Select the plan from our list of your liking and get started.</p>
+            <h4 class="subtitle">ជ្រើសរើសផែនការ</h4>
+            <p>ជ្រើសរើសគម្រោងពីបញ្ជីដែលអ្នកចូលចិត្ត ហើយចាប់ផ្តើម។</p>
           </div>
         </div>
       </div>
@@ -349,10 +351,8 @@
             <i class="fab fa-hornbill"></i>
           </div>
           <div class="profit-content">
-            <h4 class="subtitle">Get Profit</h4>
-            <p>
-              Wait for us to utilize the money and return you a good profit.
-            </p>
+            <h4 class="subtitle">ទទួលបានប្រាក់ចំណេញ</h4>
+            <p>ចាំ​យើង​យក​លុយ​មក​ប្រើ ហើយ​យក​ចំណេញ​មក​វិញ។</p>
           </div>
         </div>
       </div>
@@ -414,10 +414,11 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title">Currency Converter</h2>
+          <h2 class="title">កម្មវិធីបម្លែងរូបិយប័ណ្ណ</h2>
           <p class="section-para">
-            The {{ domain }} Currency Converter tool helps you to convert
-            cryptocurrency to your local currency and vice versa.
+            នេះ។ {{ domain }}
+            ឧបករណ៍បំលែងរូបិយប័ណ្ណជួយអ្នកក្នុងការបំប្លែងរូបិយប័ណ្ណគ្រីបតូទៅជារូបិយប័ណ្ណក្នុងស្រុករបស់អ្នក
+            និងច្រាសមកវិញ។
           </p>
         </div>
       </div>
@@ -462,10 +463,10 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title">Best Investment Plans</h2>
+          <h2 class="title">ផែនការវិនិយោគល្អបំផុត</h2>
           <p class="section-para">
-            Take a look at our best investment plans where you will get the best
-            profits.
+            សូមក្រឡេកមើលផែនការវិនិយោគដ៏ល្អបំផុតរបស់យើង
+            ដែលអ្នកនឹងទទួលបានប្រាក់ចំណេញល្អបំផុត។
           </p>
         </div>
       </div>
@@ -475,22 +476,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Beginner plan</div>
+            <div class="plan_name">ផែនការចាប់ផ្តើម</div>
             <div class="plan_day">20 %</div>
-            <div class="plan_pr">Daily / 1 Times</div>
+            <div class="plan_pr">ប្រចាំថ្ងៃ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $100 <span>Max: $999</span></div>
+            <div class="plan_min">
+              នាទី 100 ដុល្លារ <span>អតិបរមា៖ ៩៩៩ ដុល្លារ</span>
+            </div>
 
             <a
               href="#"
@@ -498,7 +499,7 @@
               data-target="#depoModal"
               data-resource='{"id":1,"name":"Beginner plan","minimum":"100","maximum":"1000","fixed_amount":"0","interest":"5","interest_status":"1","times":"24","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-08T18:29:20.000000Z","updated_at":"2021-09-18T15:41:21.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
@@ -506,22 +507,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Professional plan</div>
-            <div class="plan_day">40 %</div>
-            <div class="plan_pr">3 DAYS / 1 Times</div>
+            <div class="plan_name">ផែនការវិជ្ជាជីវៈ</div>
+            <div class="plan_day">40%</div>
+            <div class="plan_pr">3 ថ្ងៃ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $1000 <span>Max: $4999</span></div>
+            <div class="plan_min">
+              នាទី ១០០០ ដុល្លារ <span>អតិបរមា៖ ៤៩៩៩ ដុល្លារ</span>
+            </div>
 
             <a
               href="#"
@@ -529,7 +530,7 @@
               data-target="#depoModal"
               data-resource='{"id":2,"name":"Amateur plan","minimum":"1000","maximum":"5000","fixed_amount":"0","interest":"10","interest_status":"1","times":"72","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-08T18:31:40.000000Z","updated_at":"2021-09-05T08:38:12.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
@@ -537,22 +538,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Expert plan</div>
+            <div class="plan_name">ផែនការអ្នកជំនាញ</div>
             <div class="plan_day">15 %</div>
-            <div class="plan_pr">60 DAYS / 1 Times</div>
+            <div class="plan_pr">60 ថ្ងៃ។ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $5000 <span>Max: Unlimited</span></div>
+            <div class="plan_min">
+              នាទី ៥០០០ ដុល្លារ <span>អតិបរមា៖ គ្មានដែនកំណត់</span>
+            </div>
 
             <a
               href="#"
@@ -560,7 +561,7 @@
               data-target="#depoModal"
               data-resource='{"id":3,"name":"Advance plan","minimum":"5000","maximum":"10000","fixed_amount":"0","interest":"15","interest_status":"1","times":"240","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-27T12:09:50.000000Z","updated_at":"2021-09-05T08:39:01.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
@@ -584,10 +585,11 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title">Reason To Choose Us</h2>
+          <h2 class="title">ហេតុផលជ្រើសរើសយើង</h2>
           <p class="section-para">
-            Our goal is to utilize our investors money and provide a source of
-            high income for them while minimizing the any possibility of risk.
+            គោលដៅរបស់យើងគឺប្រើប្រាស់ប្រាក់វិនិយោគរបស់យើង
+            និងផ្តល់នូវប្រភពនៃប្រាក់ចំណូលខ្ពស់សម្រាប់ពួកគេ
+            ខណៈពេលដែលកាត់បន្ថយលទ្ធភាពនៃហានិភ័យណាមួយ។
           </p>
         </div>
       </div>
@@ -600,10 +602,9 @@
             <i class="fas fa-globe-americas"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Global</h3>
+            <h3 class="title">សកល</h3>
             <p>
-              We are an international company having client from different
-              countries around the world.
+              យើងជាក្រុមហ៊ុនអន្តរជាតិដែលមានអតិថិជនមកពីប្រទេសផ្សេងៗគ្នាជុំវិញពិភពលោក។
             </p>
           </div>
         </div>
@@ -614,10 +615,10 @@
             <i class="fab fa-btc"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Crypto</h3>
+            <h3 class="title">គ្រីបតូ</h3>
             <p>
-              Our platform supports all types of cryptocurrency having an easy
-              investment system.
+              វេទិការបស់យើងគាំទ្រគ្រប់ប្រភេទនៃ cryptocurrency
+              ដែលមានប្រព័ន្ធវិនិយោគងាយស្រួល។
             </p>
           </div>
         </div>
@@ -628,10 +629,11 @@
             <i class="fas fa-star-of-david"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Reliable</h3>
+            <h3 class="title">អាចទុកចិត្តបាន។</h3>
             <p>
-              We are very reliable as a huge number of people trust us. We
-              conduct safe and secure services.
+              យើង​មាន​ទំនុក​ចិត្ត​ខ្លាំង​ណាស់
+              ព្រោះ​មនុស្ស​មួយ​ចំនួន​ធំ​ទុក​ចិត្ត​យើង។
+              យើងធ្វើសេវាកម្មប្រកបដោយសុវត្ថិភាព និងសុវត្ថិភាព។
             </p>
           </div>
         </div>
@@ -642,10 +644,10 @@
             <i class="fas fa-file-alt"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Certified</h3>
+            <h3 class="title">បញ្ជាក់</h3>
             <p>
-              We are a certified company doing legal business in the legal
-              field. We operate international business.
+              យើងជាក្រុមហ៊ុនដែលមានការបញ្ជាក់ធ្វើអាជីវកម្មស្របច្បាប់ក្នុងវិស័យច្បាប់។
+              យើងធ្វើអាជីវកម្មអន្តរជាតិ។
             </p>
           </div>
         </div>
@@ -656,10 +658,10 @@
             <i class="fas fa-lock"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Secure</h3>
+            <h3 class="title">សុវត្ថិភាព</h3>
             <p>
-              We constantly work on improving our system and level of our
-              security to minimize any potential risks.
+              យើងធ្វើការឥតឈប់ឈរលើការកែលម្អប្រព័ន្ធ និងកម្រិតសុវត្ថិភាពរបស់យើង
+              ដើម្បីកាត់បន្ថយហានិភ័យដែលអាចកើតមាន។
             </p>
           </div>
         </div>
@@ -670,10 +672,10 @@
             <i class="fas fa-wallet"></i>
           </div>
           <div class="feature-content">
-            <h3 class="title">Profitable</h3>
+            <h3 class="title">ចំណេញ</h3>
             <p>
-              Our professional traders will utilize your money making sure to
-              get a good profit for you.
+              ពាណិជ្ជករដែលមានជំនាញវិជ្ជាជីវៈរបស់យើងនឹងប្រើប្រាស់ប្រាក់របស់អ្នក
+              ធ្វើឱ្យប្រាកដថាទទួលបានប្រាក់ចំណេញល្អសម្រាប់អ្នក។
             </p>
           </div>
         </div>
@@ -697,10 +699,10 @@
     <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
         <div class="call-to-action-content">
-          <h2 class="title">Join With Us</h2>
-          <p>Want to be a part of our community? Join us today.</p>
+          <h2 class="title">ចូលរួមជាមួយយើង</h2>
+          <p>ចង់ក្លាយជាផ្នែកមួយនៃសហគមន៍របស់យើង? ចូលរួមជាមួយយើងនៅថ្ងៃនេះ។</p>
           <div class="call-to-action-btn">
-            <a href="register.html" class="btn btn-danger">SIGN UP</a>
+            <a href="/register" class="btn btn-danger">ចុះ​ឈ្មោះ</a>
           </div>
         </div>
       </div>
@@ -721,11 +723,11 @@
     <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
         <div class="team-header">
-          <h2 class="title">Frequently Asked Questions</h2>
+          <h2 class="title">សំណួរ​ដែលគេ​ច្រើន​សួរ</h2>
           <p class="section-para mt-2">
-            We answer some of your Frequently Asked Questions regarding our
-            platform. If you have a query that is not answered here, Please feel
-            free to contact us.
+            យើងឆ្លើយសំណួរដែលសួរញឹកញាប់របស់អ្នកមួយចំនួនទាក់ទងនឹងវេទិការបស់យើង។
+            ប្រសិនបើអ្នកមានសំណួរដែលមិនត្រូវបានឆ្លើយនៅទីនេះ សូមមានអារម្មណ៍
+            ឥតគិតថ្លៃដើម្បីទាក់ទងមកយើងខ្ញុំ។
           </p>
         </div>
       </div>
@@ -745,7 +747,7 @@
                   aria-expanded="true"
                   aria-controls="collapse52"
                 >
-                  What is the main activity of an Investment company?
+                  តើអ្វីជាសកម្មភាពចម្បងរបស់ក្រុមហ៊ុនវិនិយោគ?
                 </button>
               </div>
               <div
