--- a/templates/index.html
+++ b/templates/index.html
@@ -757,12 +757,11 @@
                 data-parent="#accordionExample"
               >
                 <div class="card-body">
-                  An&nbsp;investment company&nbsp;is a&nbsp;corporation&nbsp;or
-                  trust engaged in the business of&nbsp;investing&nbsp;pooled
-                  capital into financial securities.&nbsp;Investment
-                  companies&nbsp;make profits by buying and selling shares,
-                  property, bonds, cash, other funds and&nbsp;
-                  <div>other assets.<br /></div>
+                  ក្រុមហ៊ុនវិនិយោគ គឺជាសាជីវកម្ម
+                  ឬការជឿទុកចិត្តដែលចូលរួមក្នុងអាជីវកម្មនៃការវិនិយោគមូលធនរួមបញ្ចូលគ្នាទៅក្នុងមូលបត្រហិរញ្ញវត្ថុ។
+                  ក្រុមហ៊ុនវិនិយោគបង្កើតប្រាក់ចំណេញដោយការទិញ និងលក់ភាគហ៊ុន
+                  អចលនទ្រព្យ មូលបត្របំណុល សាច់ប្រាក់ មូលនិធិផ្សេងៗ និង
+                  ទ្រព្យសម្បត្តិផ្សេងទៀត។
                 </div>
               </div>
             </div>
@@ -776,7 +775,7 @@
                   aria-expanded="true"
                   aria-controls="collapse51"
                 >
-                  How is cooperation with investors implemented?
+                  តើកិច្ចសហប្រតិបត្តិការជាមួយអ្នកវិនិយោគត្រូវបានអនុវត្តយ៉ាងដូចម្តេច?
                 </button>
               </div>
               <div
@@ -786,9 +785,9 @@
                 data-parent="#accordionExample"
               >
                 <div class="card-body">
-                  Cooperation is maintained through our live chat feature. Also
-                  we have mail service available to answer any kind of
-                  query&nbsp;of yours.
+                  កិច្ចសហប្រតិបត្តិការត្រូវបានរក្សាតាមរយៈមុខងារជជែកផ្ទាល់របស់យើង។
+                  យើងក៏មានសេវាផ្ញើតាមប្រៃសណីយ៍
+                  ដើម្បីឆ្លើយតបរាល់សំណួររបស់អ្នកផងដែរ។
                 </div>
               </div>
             </div>
@@ -802,7 +801,7 @@
                   aria-expanded="true"
                   aria-controls="collapse50"
                 >
-                  How much can an investor request for withdrawal?
+                  តើវិនិយោគិនអាចស្នើសុំដកប្រាក់បានប៉ុន្មាន?
                 </button>
               </div>
               <div
@@ -812,14 +811,13 @@
                 data-parent="#accordionExample"
               >
                 <div class="card-body">
-                  Deposit and withdrawal are available for at any time. Be sure,
-                  that your funds are not used in any ongoing trade before the
-                  withdrawal. The available amount is shown in your dashboard on
-                  the main page of Investing platform. Deposit and withdrawal
-                  are available for at any time. Be sure, that your funds are
-                  not used in any ongoing trade before the withdrawal. The
-                  available amount is shown in your dashboard on the main page
-                  of Investing platform.
+                  ការដាក់ប្រាក់ និងដកប្រាក់គឺអាចរកបានគ្រប់ពេលវេលា។ ត្រូវប្រាកដថា
+                  មូលនិធិរបស់អ្នកមិនត្រូវបានប្រើនៅក្នុងការជួញដូរដែលកំពុងដំណើរការណាមួយមុនពេលដកប្រាក់នោះទេ។
+                  ចំនួនទឹកប្រាក់ដែលមានត្រូវបានបង្ហាញនៅក្នុងផ្ទាំងគ្រប់គ្រងរបស់អ្នកនៅលើទំព័រសំខាន់នៃវេទិកាវិនិយោគ។
+                  ការដាក់ប្រាក់ និងដកប្រាក់គឺអាចរកបានគ្រប់ពេលវេលា។ ត្រូវប្រាកដថា
+                  មូលនិធិរបស់អ្នកមិនត្រូវបានប្រើនៅក្នុងការជួញដូរដែលកំពុងដំណើរការណាមួយមុនពេលដកប្រាក់នោះទេ។
+                  នេះ។
+                  ចំនួនទឹកប្រាក់ដែលមានត្រូវបានបង្ហាញនៅក្នុងផ្ទាំងគ្រប់គ្រងរបស់អ្នកនៅលើទំព័រសំខាន់នៃវេទិកាវិនិយោគ។
                   <br />
                 </div>
               </div>
@@ -834,7 +832,7 @@
                   aria-expanded="true"
                   aria-controls="collapse49"
                 >
-                  How to become a {{ domain }} Investment partner?
+                  តើធ្វើដូចម្តេចដើម្បីក្លាយជា A {{ domain }} ដៃគូវិនិយោគ?
                 </button>
               </div>
               <div
@@ -844,8 +842,8 @@
                 data-parent="#accordionExample"
               >
                 <div class="card-body">
-                  Just follow some easy steps by clicking register button and
-                  become a part of our community.<br />
+                  គ្រាន់​តែ​អនុវត្ត​តាម​ជំហាន​ងាយ​ស្រួល​មួយ​ចំនួន​ដោយ​ចុច​ប៊ូតុង​ចុះឈ្មោះ
+                  ហើយ​ក្លាយ​ជា​ផ្នែក​មួយ​នៃ​សហគមន៍​របស់​យើង។<br />
                 </div>
               </div>
             </div>
@@ -871,10 +869,10 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title">We Accept Payment</h2>
+          <h2 class="title">យើងទទួលយកការទូទាត់</h2>
           <p class="section-para">
-            We accept all major cryptocurrencies and fiat payment methods to
-            make your investment process easier with our platform.
+            យើងទទួលយករូបិយប័ណ្ណគ្រីបតូសំខាន់ៗទាំងអស់ និងវិធីបង់ប្រាក់ fiat
+            ដើម្បីធ្វើឱ្យដំណើរការវិនិយោគរបស់អ្នកកាន់តែងាយស្រួលជាមួយវេទិការបស់យើង។
           </p>
         </div>
       </div>
@@ -917,10 +915,10 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header">
-          <h2 class="title">Subscribe Now</h2>
+          <h2 class="title">ជាវឥឡូវនេះ</h2>
           <p class="section-para">
-            Once you subscribe to our newsletter, we will send our promo offers
-            and news to your email.
+            នៅពេលដែលអ្នកជាវព្រឹត្តិប័ត្រព័ត៌មានរបស់យើង
+            យើងនឹងផ្ញើការផ្តល់ជូនពិសេស និងព័ត៌មានរបស់យើងទៅកាន់អ៊ីមែលរបស់អ្នក។
           </p>
         </div>
       </div>
