--- a/templates/plan.html
+++ b/templates/plan.html
@@ -1,5 +1,5 @@
 {% extends "layouts/home.html" %}
-<!---->{% block title %} Investment plans {% endblock title %}<!---->
+<!---->{% block title %} ផែនការវិនិយោគ {% endblock title %}<!---->
 {% block content %}
 
 <div class="inner-banner-area">
@@ -7,19 +7,22 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="title"><span>Investment Plan</span></h1>
+        <h1 class="title"><span>ផែនការវិនិយោគ</span></h1>
       </div>
     </div>
   </div>
 </div>
 
-<div class="investment-plan-area">
+<section class="investment-plan-area">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-10">
+      <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title text-center"></h2>
-          <p class="section-para"></p>
+          <h2 class="title">ផែនការវិនិយោគល្អបំផុត</h2>
+          <p class="section-para">
+            សូមក្រឡេកមើលផែនការវិនិយោគដ៏ល្អបំផុតរបស់យើង
+            ដែលអ្នកនឹងទទួលបានប្រាក់ចំណេញល្អបំផុត។
+          </p>
         </div>
       </div>
     </div>
@@ -28,22 +31,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Beginner plan</div>
+            <div class="plan_name">ផែនការចាប់ផ្តើម</div>
             <div class="plan_day">20 %</div>
-            <div class="plan_pr">Daily / 1 Times</div>
+            <div class="plan_pr">ប្រចាំថ្ងៃ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $100 <span>Max: $999</span></div>
+            <div class="plan_min">
+              នាទី 100 ដុល្លារ <span>អតិបរមា៖ ៩៩៩ ដុល្លារ</span>
+            </div>
 
             <a
               href="#"
@@ -51,7 +54,7 @@
               data-target="#depoModal"
               data-resource='{"id":1,"name":"Beginner plan","minimum":"100","maximum":"1000","fixed_amount":"0","interest":"5","interest_status":"1","times":"24","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-08T18:29:20.000000Z","updated_at":"2021-09-18T15:41:21.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
@@ -59,22 +62,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Professional plan</div>
-            <div class="plan_day">40 %</div>
-            <div class="plan_pr">3 DAYS / 1 Times</div>
+            <div class="plan_name">ផែនការវិជ្ជាជីវៈ</div>
+            <div class="plan_day">40%</div>
+            <div class="plan_pr">3 ថ្ងៃ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $1000 <span>Max: $4999</span></div>
+            <div class="plan_min">
+              នាទី ១០០០ ដុល្លារ <span>អតិបរមា៖ ៤៩៩៩ ដុល្លារ</span>
+            </div>
 
             <a
               href="#"
@@ -82,7 +85,7 @@
               data-target="#depoModal"
               data-resource='{"id":2,"name":"Amateur plan","minimum":"1000","maximum":"5000","fixed_amount":"0","interest":"10","interest_status":"1","times":"72","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-08T18:31:40.000000Z","updated_at":"2021-09-05T08:38:12.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
@@ -90,22 +93,22 @@
       <div class="col-md-4">
         <div class="plan-area">
           <div class="plan-item">
-            <div class="plan_name">Expert plan</div>
-            <div class="plan_day">60 %</div>
-            <div class="plan_pr">10 DAYS / 1 Times</div>
+            <div class="plan_name">ផែនការអ្នកជំនាញ</div>
+            <div class="plan_day">15 %</div>
+            <div class="plan_pr">60 ថ្ងៃ។ / 1 ដង</div>
 
             <div>
               <ul>
                 <li>
-                  <span class="badge badge-success"
-                    >Capital Will Return Back</span
-                  >
+                  <span class="badge badge-success">ដើមទុននឹងត្រលប់មកវិញ</span>
                 </li>
-                <li>24/7Support</li>
+                <li>ការគាំទ្រ 24/7</li>
               </ul>
             </div>
 
-            <div class="plan_min">Min. $5000 <span>Max: Unlimited</span></div>
+            <div class="plan_min">
+              នាទី ៥០០០ ដុល្លារ <span>អតិបរមា៖ គ្មានដែនកំណត់</span>
+            </div>
 
             <a
               href="#"
@@ -113,14 +116,14 @@
               data-target="#depoModal"
               data-resource='{"id":3,"name":"Advance plan","minimum":"5000","maximum":"10000","fixed_amount":"0","interest":"15","interest_status":"1","times":"240","status":"1","featured":"1","capital_back_status":"1","lifetime_status":"0","repeat_time":"1","created_at":"2021-01-27T12:09:50.000000Z","updated_at":"2021-09-05T08:39:01.000000Z"}'
               class="btn btn-primary investButton"
-              >Invest Now</a
+              >វិនិយោគឥឡូវនេះ</a
             >
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
 
 <div class="sec-area">
   <div class="container">
