--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "layouts/auth.html" %}
 <!---->
-{% block title %}Login into your account {% endblock title %}
+{% block title %} ចូលទៅក្នុងគណនីរបស់អ្នក។{% endblock title %}
 <!---->
 {% block content %}
 <!-- login area start -->
@@ -10,21 +10,24 @@
       <form method="POST" action="">
         {% csrf_token %}
         <div class="login-form-head">
-          <h4>Login<br />{{ domain }}</h4>
+          <h4>
+            ចូល<br />
+            Capita-Profit
+          </h4>
           <p>
-            <i class="ti-arrow-right"></i>Hello there, Login and Trade with the
-            best
+            <i class="ti-arrow-right"></i>ជំរាបសួរ,
+            ចូលនិងធ្វើពាណិជ្ជកម្មជាមួយល្អបំផុត
           </p>
         </div>
 
         <div class="login-form-body">
           <div class="form-gp">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="exampleInputEmail1">អាស័យ​ដ្ឋាន​អ៊ី​ម៉េ​ល</label>
             <input type="email" name="email" id="Uemail" required />
             <i class="ti-email"></i>
           </div>
           <div class="form-gp">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="exampleInputPassword1">ពាក្យសម្ងាត់</label>
             <input type="password" name="password" id="password" />
             <i class="ti-lock"></i>
           </div>
@@ -39,7 +42,7 @@
                 <label
                   class="custom-control-label"
                   for="customControlAutosizing"
-                  >Remember Me</label
+                  >ចងចាំខ្ញុំ</label
                 >
               </div>
             </div>
@@ -55,12 +58,12 @@
               style="background: orange; font-size: 15px; color: #fff"
               class="btn btn-warning"
             >
-              Submit <i class="ti-arrow-right"></i>
+              ដាក់ស្នើ <i class="ti-arrow-right"></i>
             </button>
           </div>
           <div class="form-footer text-center mt-5">
             <p class="text-muted">
-              Don't have an account? <a href="{% url 'register' %}">Sign up</a>
+              មិនមានគណនីមែនទេ? <a href="{% url 'register' %}">ចុះ​ឈ្មោះ</a>
             </p>
           </div>
         </div>
