--- a/templates/blog.html
+++ b/templates/blog.html
@@ -23,7 +23,7 @@
       </div>
       <div class="col-lg-4">
         <div class="widgets-box">
-          <div class="sidebar-head bg-2"><span>Recent Posts</span></div>
+          <div class="sidebar-head bg-2"><span>ប្រកាសថ្មីៗ</span></div>
           <div class="sidebar-text">
             <ul class="sidebar-post"></ul>
           </div>
