--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -9,7 +9,7 @@
 {% endblock style %}
 
 <!---->
-{% block title %} Create a new account {% endblock title %} {% block content %}
+{% block title %} បង្កើតគណនីថ្មី។ {% endblock title %} {% block content %}
 <!-- login area start -->
 <div class="login-area login-bg">
   <div class="container">
@@ -81,7 +81,7 @@
                         class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20"
                         id="btn-register"
                       >
-                        Register
+                        ចុះឈ្មោះ
                       </button>
                     </div>
                   </div>
@@ -89,8 +89,8 @@
                   <hr />
                   <div class="form-footer text-center mt-3">
                     <p class="text-muted">
-                      Don't have an account?
-                      <a href="{% url 'login' %}">Login</a>
+                      មិនមានគណនីមែនទេ?
+                      <a href="{% url 'login' %}">ចូល</a>
                     </p>
                   </div>
                 </div>
