--- a/templates/users/changepassword.html
+++ b/templates/users/changepassword.html
@@ -1,12 +1,13 @@
 {% extends 'layouts/users.html' %} {% load crispy_forms_tags %}<!---->
-{% block title %} Change password {% endblock title %} {% block styles %}
+{% block title %} ផ្លាស់ប្តូរពាក្យសម្ងាត់ {% endblock title %} {% block styles
+%}
 <style></style>
 {% endblock styles %} {% block content %}
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-  <h1 class="h3 mb-0 text-gray-800">Settings</h1>
+  <h1 class="h3 mb-0 text-gray-800">ការកំណត់</h1>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">settings</li>
+    <li class="breadcrumb-item"><a href="/">ផ្ទះ</a></li>
+    <li class="breadcrumb-item active" aria-current="page">ការកំណត់</li>
   </ol>
 </div>
 
@@ -18,14 +19,14 @@
           class="nav-link"
           href="{% url 'settings_' %}"
           aria-controls="settings"
-          >Profile Settings</a
+          >ការកំណត់ប្រវត្តិរូប</a
         >
       </li>
       <li class="nav-item">
         <a
           class="nav-link active btn btn-primary ml-2 mb-2"
           href="{% url 'change_password' %}"
-          >Security</a
+          >សន្តិសុខ</a
         >
       </li>
     </ul>
