--- a/templates/users/changepassword.html
+++ b/templates/users/changepassword.html
@@ -1,8 +1,7 @@
 {% extends 'layouts/users.html' %} {% load crispy_forms_tags %}<!---->
-{% block title %} ផ្លាស់ប្តូរពាក្យសម្ងាត់ {% endblock title %} {% block styles
-%}
-<style></style>
-{% endblock styles %} {% block content %}
+{% block title %} ផ្លាស់ប្តូរពាក្យសម្ងាត់ {% endblock title %}
+<!---->
+{% block content %}
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
   <h1 class="h3 mb-0 text-gray-800">ការកំណត់</h1>
   <ol class="breadcrumb">
