--- a/templates/users/changepassword.html
+++ b/templates/users/changepassword.html
@@ -72,7 +72,7 @@
                   name="submit"
                   id=""
                   class="btn btn-primary btn-block"
-                  value="ChangePassword"
+                  value="ផ្លាស់ប្តូរពាក្យសម្ងាត់"
                 />
               </div>
             </form>
